log
Thu May 12 00:34:35 UTC 2022: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:71:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
339cdb2
Thu May 12 00:34:58 UTC 2022: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
2562caf
Thu May 12 00:35:15 UTC 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
fb0a9f1
Thu May 12 01:08:41 UTC 2022: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
fd19e95
Thu May 12 01:09:07 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
58e8233
Thu May 12 01:09:49 UTC 2022: 
 sudoku.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|0
1e0d1ee
Thu May 12 01:11:59 UTC 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
ca253d3
Thu May 12 02:20:42 UTC 2022: 
 sudoku.c | 31 +++++++++++++++++++++++++++++++
 1 file changed, 31 insertions(+)
 tests:  2|4
total_score: 15/70
24079bd
Thu May 12 02:32:23 UTC 2022: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|4
total_score: 15/70
a8d1c08
Thu May 12 02:36:54 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
4778239
Thu May 12 02:40:57 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
0744a31
Thu May 12 02:41:35 UTC 2022: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
2e34cd0
Thu May 12 02:42:11 UTC 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
679fb62
Thu May 12 02:43:34 UTC 2022: 
 sudoku.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
f34f2e1
Thu May 12 02:48:17 UTC 2022: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
31baee8
Thu May 12 02:49:47 UTC 2022: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
21df8e3
Thu May 12 02:54:09 UTC 2022: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|4
total_score: 15/70
4da2597
Thu May 12 02:54:58 UTC 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
2781659
Thu May 12 02:55:37 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
a3cb567
Thu May 12 02:56:14 UTC 2022: 
 sudoku.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
a8b156b
Thu May 12 02:56:33 UTC 2022: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|4
total_score: 15/70
8867c07
